# ratatui-minesweeper

./: Cargo.toml  justfile  readme.md
src/: main.rs
src/appstate/: app.rs  finished_state.rs  lost.rs  menu.rs  mod.rs  playing.rs  screen.rs  won.rs
src/components/: app.rs  appstate.rs  cell.rs  gamestate.rs  grid.rs  mod.rs
