[package]
name = "ratatui-minesweeper"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
rstest = "0.26.1"

[dependencies]
anyhow = "1.0.100"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
rand = "0.9.2"
ratatui = "0.29.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time"] }
